Fix dark mode danger table color

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -64,7 +64,10 @@ time[title] {
   .table-success {
     --bs-table-bg: rgb(var(--bs-success-rgb), .25);
   }
-  .table-primary, .table-secondary, .table-success {
+  .table-danger {
+    --bs-table-bg: rgb(var(--bs-danger-rgb), .25);
+  }
+  .table-primary, .table-secondary, .table-success, .table-danger {
     --bs-table-color: initial;
     border-color: inherit;
   }
